# little_thief

./: .gitignore  666666666  ALL_BUILD.vcxproj  CMakeLists.txt  LICENSE  MANUAL_LOADING_README.md  PhantomEdge.sln  PhantomEdge.vcxproj  PhantomEdge.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  project_log.md
.cursor/rules/: rules.mdc
PhantomEdge.dir/Debug/PhantomEdge.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  Masm.read.1u.tlog  Masm.write.1u.tlog
PhantomEdge.dir/Release/: PhantomEdge.exe.recipe  PhantomEdge.iobj
PhantomEdge.dir/Release/PhantomEdge.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Masm.write.1u.tlog  PhantomEdge.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
core/: coff_loader.c  core.c  cynical_logger.c  dynamic_payload_generator.c  ekko_advanced.c  environment_chameleon.c  evasion.c  halo_gate.c  injection_arsenal.c  injection_techniques.c  intelligent_bypass.c  kernel_direct_syscalls.c  loader.c  manual_loader.c  mem.c  performance_profiler.c  rdi.c  stealth_operations.asm  strategy.c  strategy_ekko.c  strategy_manual_load.c  syscall_stub.asm  syscalls.c  test_manual_load.c  utils.c
core/include/: core.h  syscalls.h  utils.h
fuzzer/: CMakeLists.txt  crash_handler.c  fuzzer_main.c  pe_mutator.c  test_harness.c
fuzzer/include/: fuzzer.h
include/: coff_loader.h  common_defines.h  cynical_logger.h  dynamic_payload_generator.h  ekko_advanced.h  environment_chameleon.h  evasion.h  halo_gate.h  injection_arsenal.h  intelligent_bypass.h  kernel_direct_syscalls.h  manual_loader.h  mem.h  ntstructs.h  payload.h  performance_profiler.h  rdi.h  rtldr_ctx.h  stealth_asm.h  strategy.h  syscalls.h  utils.h
stub/: entry.c  syscall_stub.asm
test_payload/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  TestPayload.sln  test_payload.vcxproj  test_payload.vcxproj.filters
test_payload/include/: reflective_loader.h
test_payload/src/: dllmain.c  reflective_loader.c
test_payload/test_payload.dir/Debug/: test_payload.dll.recipe
test_payload/test_payload.dir/Debug/test_payload.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test_payload.lastbuildstate
test_payload/test_payload.dir/Release/: test_payload.dll.recipe
test_payload/test_payload.dir/Release/test_payload.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test_payload.lastbuildstate
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  ZERO_CHECK.lastbuildstate
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
